// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CommentsTable playground 1`] = `
<Story
  PropTable={[Function]}
  components={
    Object {
      "a": [Function],
      "code": [Function],
      "h1": [Function],
      "h2": [Function],
      "h3": [Function],
      "h4": [Function],
      "h5": [Function],
      "h6": [Function],
      "li": [Function],
      "p": [Function],
      "ul": [Function],
    }
  }
  context={
    Object {
      "hooks": HooksContext {
        "currentContext": [Circular],
        "currentDecoratorName": null,
        "currentEffects": Array [
          Object {
            "create": [Function],
          },
        ],
        "currentHooks": Array [],
        "currentPhase": "NONE",
        "hasUpdates": false,
        "hookListsMap": WeakMap {},
        "mountedDecorators": Set {
          [Function],
          [Function],
          [Function],
          [Function],
        },
        "nextHookIndex": 0,
        "prevEffects": Array [],
        "prevMountedDecorators": Set {},
        "renderListener": [Function],
      },
      "id": "commentstable--playground",
      "kind": "CommentsTable",
      "name": "playground",
      "parameters": Object {
        "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/GenericTable/CommentsTable.stories.tsx",
        "framework": "react",
        "options": Object {
          "hierarchyRootSeparator": "|",
          "hierarchySeparator": /\\\\/\\|\\\\\\./,
        },
      },
      "story": "playground",
    }
  }
  excludedPropTypes={Array []}
  info=""
  maxPropArrayLength={3}
  maxPropObjectKeys={3}
  maxPropStringLength={50}
  maxPropsIntoLine={3}
  propTableCompare={[Function]}
  propTables={Array []}
  propTablesExclude={Array []}
  showHeader={true}
  showInline={false}
  showSource={true}
  styles={[Function]}
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <CommentsTable
      comments={
        Array [
          Object {
            "body": "body",
            "commentor": "commentor",
            "creationDate": 1570656854837,
            "filePath": "filePath",
            "id": 1,
            "pullRequestUrl": "pullRequestUrl",
            "repositoryId": 123421,
            "requester": "requester",
            "url": "url",
          },
        ]
      }
    >
      <CommentsTable__Wrapper>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CommentsTable__Wrapper-uqw2vv-0",
                "isStatic": true,
                "lastClassName": "iPftBM",
                "rules": Array [
                  "flex:1 1 auto;display:flex;flex-direction:column;",
                ],
              },
              "displayName": "CommentsTable__Wrapper",
              "render": [Function],
              "styledComponentId": "CommentsTable__Wrapper-uqw2vv-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="CommentsTable__Wrapper-uqw2vv-0 iPftBM"
          >
            <AutoSizer
              disableHeight={false}
              disableWidth={false}
              onResize={[Function]}
              style={Object {}}
            >
              <div
                style={
                  Object {
                    "height": 0,
                    "overflow": "visible",
                    "width": 0,
                  }
                }
              >
                <MultiGrid
                  cellRenderer={[Function]}
                  classNameBottomLeftGrid=""
                  classNameBottomRightGrid=""
                  classNameTopLeftGrid=""
                  classNameTopRightGrid=""
                  columnCount={8}
                  columnWidth={[Function]}
                  enableFixedColumnScroll={true}
                  enableFixedRowScroll={true}
                  fixedColumnCount={2}
                  fixedRowCount={1}
                  height={500}
                  hideBottomLeftGridScrollbar={true}
                  hideTopRightGridScrollbar={true}
                  rowCount={3}
                  rowHeight={40}
                  scrollToColumn={0}
                  scrollToRow={0}
                  style={
                    Object {
                      "border": "1px solid #ddd",
                    }
                  }
                  styleBottomLeftGrid={Object {}}
                  styleBottomRightGrid={Object {}}
                  styleTopLeftGrid={Object {}}
                  styleTopRightGrid={Object {}}
                  width={0}
                />
              </div>
            </AutoSizer>
          </div>
        </StyledComponent>
      </CommentsTable__Wrapper>
    </CommentsTable>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</Story>
`;

exports[`Storyshots CommentsTable with empty comments 1`] = `
<Story
  PropTable={[Function]}
  components={
    Object {
      "a": [Function],
      "code": [Function],
      "h1": [Function],
      "h2": [Function],
      "h3": [Function],
      "h4": [Function],
      "h5": [Function],
      "h6": [Function],
      "li": [Function],
      "p": [Function],
      "ul": [Function],
    }
  }
  context={
    Object {
      "hooks": HooksContext {
        "currentContext": [Circular],
        "currentDecoratorName": null,
        "currentEffects": Array [
          Object {
            "create": [Function],
          },
        ],
        "currentHooks": Array [],
        "currentPhase": "NONE",
        "hasUpdates": false,
        "hookListsMap": WeakMap {},
        "mountedDecorators": Set {
          [Function],
          [Function],
          [Function],
          [Function],
        },
        "nextHookIndex": 0,
        "prevEffects": Array [],
        "prevMountedDecorators": Set {},
        "renderListener": [Function],
      },
      "id": "commentstable--with-empty-comments",
      "kind": "CommentsTable",
      "name": "with empty comments",
      "parameters": Object {
        "fileName": "/Users/amauryw/dev/commentor/frontend/src/components/GenericTable/CommentsTable.stories.tsx",
        "framework": "react",
        "options": Object {
          "hierarchyRootSeparator": "|",
          "hierarchySeparator": /\\\\/\\|\\\\\\./,
        },
      },
      "story": "with empty comments",
    }
  }
  excludedPropTypes={Array []}
  info=""
  maxPropArrayLength={3}
  maxPropObjectKeys={3}
  maxPropStringLength={50}
  maxPropsIntoLine={3}
  propTableCompare={[Function]}
  propTables={Array []}
  propTablesExclude={Array []}
  showHeader={true}
  showInline={false}
  showSource={true}
  styles={[Function]}
>
  <div
    style={
      Object {
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <CommentsTable
      comments={Array []}
    >
      <CommentsTable__Wrapper>
        <StyledComponent
          forwardedClass={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "CommentsTable__Wrapper-uqw2vv-0",
                "isStatic": true,
                "lastClassName": "iPftBM",
                "rules": Array [
                  "flex:1 1 auto;display:flex;flex-direction:column;",
                ],
              },
              "displayName": "CommentsTable__Wrapper",
              "render": [Function],
              "styledComponentId": "CommentsTable__Wrapper-uqw2vv-0",
              "target": "div",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
        >
          <div
            className="CommentsTable__Wrapper-uqw2vv-0 iPftBM"
          >
            <AutoSizer
              disableHeight={false}
              disableWidth={false}
              onResize={[Function]}
              style={Object {}}
            >
              <div
                style={
                  Object {
                    "height": 0,
                    "overflow": "visible",
                    "width": 0,
                  }
                }
              >
                <MultiGrid
                  cellRenderer={[Function]}
                  classNameBottomLeftGrid=""
                  classNameBottomRightGrid=""
                  classNameTopLeftGrid=""
                  classNameTopRightGrid=""
                  columnCount={8}
                  columnWidth={[Function]}
                  enableFixedColumnScroll={true}
                  enableFixedRowScroll={true}
                  fixedColumnCount={2}
                  fixedRowCount={1}
                  height={500}
                  hideBottomLeftGridScrollbar={true}
                  hideTopRightGridScrollbar={true}
                  rowCount={2}
                  rowHeight={40}
                  scrollToColumn={0}
                  scrollToRow={0}
                  style={
                    Object {
                      "border": "1px solid #ddd",
                    }
                  }
                  styleBottomLeftGrid={Object {}}
                  styleBottomRightGrid={Object {}}
                  styleTopLeftGrid={Object {}}
                  styleTopRightGrid={Object {}}
                  width={0}
                />
              </div>
            </AutoSizer>
          </div>
        </StyledComponent>
      </CommentsTable__Wrapper>
    </CommentsTable>
  </div>
  <button
    className="info__show-button"
    onClick={[Function]}
    style={
      Object {
        "background": "#027ac5",
        "border": "none",
        "borderRadius": "0 0 0 5px",
        "color": "#fff",
        "cursor": "pointer",
        "display": "block",
        "fontFamily": "sans-serif",
        "fontSize": "12px",
        "padding": "5px 15px",
        "position": "fixed",
        "right": 0,
        "top": 0,
      }
    }
    type="button"
  >
    Show Info
  </button>
</Story>
`;
